[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scene/Control.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
extra_spacing_top = 3
font_data = ExtResource( 1 )

[node name="lose" type="CanvasLayer"]
pause_mode = 2

[node name="Control" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 53.0
margin_top = 308.0
margin_right = 53.0
margin_bottom = -169.0
script = ExtResource( 2 )

[node name="you_died" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = -406.0
margin_right = 350.0
margin_bottom = -54.0
custom_fonts/normal_font = SubResource( 1 )
text = "You Died
"

[node name="Button" type="Button" parent="Control"]
pause_mode = 2
margin_left = 461.0
margin_top = 238.0
margin_right = 753.0
margin_bottom = 279.0
text = "play again"

[node name="high_score" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.523
anchor_right = 0.5
anchor_bottom = 0.523
margin_left = -370.0
margin_top = -191.08
margin_right = 476.0
margin_bottom = -79.08
custom_fonts/normal_font = SubResource( 2 )
text = "But you managed to get 12,000 points"

[connection signal="visibility_changed" from="Control" to="Control" method="_on_Control_visibility_changed"]
[connection signal="pressed" from="Control/Button" to="Control" method="_on_Button_pressed"]
